<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_passenger_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/passenger_info"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_call_passenger"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/call_passenger"
            android:textAllCaps="false"
            android:textColor="@color/textColor"/>
        <Button
            android:id="@+id/btn_complete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="btnHandlerComplete"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/complete"
            android:textAllCaps="false"
            android:textColor="@color/textColor"/>
    </LinearLayout>
</LinearLayout>